# blinkreader

./: Cargo.toml  README.md
src/: blink_reader.rs  main.rs  message.rs  utils.rs
src/text/: test.txt  testcode.txt  令和3章1節_生産性の動向と課題.txt  母をたずねて三千里.txt  第1節　実体経済の動向.txt
