[package]
name = "blinktextreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["async-std"] }
iced_native = "0.10.3"
iced_futures = "0.12.0"
async-std = "1.11"